feat: LottoAutomaticTicket class 생성 및 test case 수정